# nove-caudas

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md  nove-caudas.cabal
app/: Main.hs
src/: main.rs
src/NoveCaudas/: Core.hs
test/: Spec.hs
