cabal-version:      3.6
name:               nove-caudas
version:            0.1.0.0
synopsis:           An unnacceptable discord bot
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Caio Rulli
maintainer:         Caio Rulli
extra-doc-files:    README.md

source-repository head
  type:             git
  location:         https://github.com/caiorulli/nove-caudas


common shared-properties
    build-depends:
        base  ^>=4.14.3.0
      , calamity >= 0.1.30.1
      , text >= 1.2 && < 2
      , lens >= 4.18 && < 5
      , di-polysemy ^>= 0.2
      , di >= 1.3 && < 2
      , df1 >= 0.3 && < 0.5
      , di-core ^>= 1.0.4
      , polysemy ^>= 1.5
      , polysemy-plugin ^>= 0.3
      , stm ^>= 2.5
      , text-show ^>= 3.9

library
    import:          shared-properties
    exposed-modules:
        NoveCaudas.Core
    hs-source-dirs:  src

executable nove-caudas-bot
    import:         shared-properties
    main-is:        Main.hs
    hs-source-dirs: app
    ghc-options:    -fplugin=Polysemy.Plugin
    build-depends:
        nove-caudas

test-suite nove-caudas-test
    import:         shared-properties
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    ghc-options:    -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        nove-caudas
      , hspec
